Fix the problem of the dropdown menu's z-index too high

--- a/src/app/pages/shared/thumbnail-view/thumbnail-view.component.scss
+++ b/src/app/pages/shared/thumbnail-view/thumbnail-view.component.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   background: #ffffff;
   box-shadow: 6px 11px 32px rgba(0, 0, 0, 0.72);
-  z-index: 10000;
+  z-index: 1000;
   overflow: auto;
   > div {
     padding: 37px 43px;
